--- a/app/src/main/res/layout/fragment_tab_fragment3.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment3.xml
@@ -29,13 +29,14 @@
                 android:text="Cancle" />
 
             <Button
-                android:id="@+id/bEMG"
+                android:id="@+id/btnReady"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:textAllCaps="false"
                 android:layout_marginLeft="160dp"
+                android:onClick="onClickReady"
                 android:text="Ready" />
         </LinearLayout>
         <LinearLayout
@@ -50,7 +51,7 @@
                 android:id="@+id/emgDataTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/bEMG"
+                android:layout_alignStart="@+id/btnReady"
                 android:layout_below="@+id/bEMG"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/editbox_transparent_frame"
