--- a/app/src/main/res/layout/fragment_tab_fragment1.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment1.xml
@@ -1,14 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TabFragment1">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.imangazaliev.circlemenu.CircleMenu
+        android:id="@+id/circleMenu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_centerInParent="true"
+        app:hintsEnabled="true">
+
+        <com.imangazaliev.circlemenu.CircleMenuButton
+            android:id="@+id/favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:colorNormal="#2196F3"
+            app:colorPressed="#1E88E5"
+            app:hintText="Favorite"
+            app:icon="@drawable/ic_favorite" />
+
+        <com.imangazaliev.circlemenu.CircleMenuButton
+            android:id="@+id/camera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:colorNormal="#4CAF50"
+            app:colorPressed="#43A047"
+            app:hintText="Camera"
+            app:icon="@drawable/ic_menu_camera" />
+
+        <com.imangazaliev.circlemenu.CircleMenuButton
+            android:id="@+id/music"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:colorNormal="#F44336"
+            app:colorPressed="#E53935"
+            app:hintText="Music"
+            app:icon="@drawable/ic_music_note_black_24dp" />
+
+        <com.imangazaliev.circlemenu.CircleMenuButton
+            android:id="@+id/volume"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:colorNormal="#9C27B0"
+            app:colorPressed="#8E24AA"
+            app:hintText="Place"
+            app:icon="@drawable/ic_volume_up_black_24dp" />
+
+        <!--<com.imangazaliev.circlemenu.CircleMenuButton-->
+            <!--android:id="@+id/edit"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:colorNormal="#FF9800"-->
+            <!--app:colorPressed="#FB8C00"-->
+            <!--app:hintText="Edit"-->
+            <!--app:icon="@drawable/ic_edit" />-->
+
+    </com.imangazaliev.circlemenu.CircleMenu>
+
+
+    <!-- TODO: Update blank fragment layout -->
+    <!--<TextView-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:text="@string/hello_blank_fragment" />-->
 
 </FrameLayout>
