--- a/app/src/main/res/layout/fragment_tab_fragment3.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment3.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <Button
-                android:id="@+id/bStopEmg"
+                android:id="@+id/btnCancle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="false"
@@ -36,7 +36,6 @@
                 android:layout_alignParentTop="true"
                 android:textAllCaps="false"
                 android:layout_marginLeft="160dp"
-                android:onClick="onClickReady"
                 android:text="Ready" />
         </LinearLayout>
         <LinearLayout
@@ -74,6 +73,63 @@
                 android:background="@drawable/editbox_transparent_frame"
                 />
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/SelectLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@+id/RawLinearLayout"
+            android:layout_above="@+id/BottomLinearLayout">
+            <NumberPicker
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/gestureNumberPicker">
+
+            </NumberPicker>
+            <View
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:textColor="@android:color/black"
+                android:id="@+id/view1"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:background="@drawable/imgbtn_default" />
+            <View
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:textColor="@android:color/black"
+                android:id="@+id/view2"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/cnt_margin"
+                android:background="@drawable/imgbtn_default" />
+            <View
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:text="Hello"
+                android:textColor="@android:color/black"
+                android:id="@+id/view3"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/cnt_margin"
+                android:background="@drawable/imgbtn_default" />
+            <View
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:text="Hello"
+                android:textColor="@android:color/black"
+                android:id="@+id/view4"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/cnt_margin"
+                android:background="@drawable/imgbtn_default" />
+            <View
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:text="Hello"
+                android:textColor="@android:color/black"
+                android:id="@+id/view5"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/cnt_margin"
+                android:background="@drawable/imgbtn_default" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/BottomLinearLayout"
@@ -85,12 +141,12 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/bDetect"
+                android:id="@+id/btn_Sync"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-
-                android:text="Detect" />
+                android:textAllCaps="false"
+                android:text="Sync" />
 
             <TextView
                 android:id="@+id/gestureTextView"
@@ -102,11 +158,11 @@
                 android:text="Connect Myo " />
 
             <Button
-                android:id="@+id/bSave"
+                android:id="@+id/btn_Save"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-
+                android:textAllCaps="false"
                 android:text="Save" />
         </LinearLayout>
 
