--- a/app/src/main/res/layout/camera_action_bar.xml
+++ b/app/src/main/res/layout/camera_action_bar.xml
@@ -7,11 +7,11 @@
     android:orientation="horizontal"
     android:paddingRight="18dp">
 
-    <ImageView
-        android:layout_width="36dp"
-        android:layout_height="24dp"
-        android:layout_marginRight="6dp"
-        android:src="@drawable/ic_helpcircle" />
+    <!--<ImageView-->
+        <!--android:layout_width="36dp"-->
+        <!--android:layout_height="24dp"-->
+        <!--android:layout_marginRight="6dp"-->
+        <!--android:src="@drawable/ic_helpcircle" />-->
 
     <TextView
         android:id="@+id/toolbar_title"
