--- a/app/src/main/res/layout/camera_controls.xml
+++ b/app/src/main/res/layout/camera_controls.xml
@@ -15,7 +15,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_home_black_24dp"
+            android:src="@drawable/ic_facing_front"
             android:tint="#EEFFFFFF" />
 
     </FrameLayout>
@@ -30,7 +30,7 @@
             android:layout_width="66dp"
             android:layout_height="66dp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_home_black_24dp" />
+            android:src="@drawable/capture_button" />
 
     </FrameLayout>
 
@@ -44,7 +44,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_home_black_24dp"
+            android:src="@drawable/ic_flash_off"
             android:tint="#EEFFFFFF" />
 
     </FrameLayout>
