--- a/app/src/main/res/menu/camera_main.xml
+++ b/app/src/main/res/menu/camera_main.xml
@@ -10,10 +10,10 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_main_github"
-        android:title="Go to GitHub"
+        android:title="Go to CameraKit GitHub"
         app:showAsAction="never" />
     <item
         android:id="@+id/menu_main_website"
-        android:title="Go to Website"
+        android:title="Go to CameraKit Website"
         app:showAsAction="never" />
 </menu>
