--- a/app/src/main/res/layout/activity_systemcontrol.xml
+++ b/app/src/main/res/layout/activity_systemcontrol.xml
@@ -48,16 +48,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/emgDataTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/bEMG"
-            android:layout_below="@+id/bEMG"
-            android:layout_marginTop="30dp"
-            android:background="@android:drawable/editbox_dropdown_light_frame"
-            android:text="Myo Status"
-            android:textSize="15dp" />
     </LinearLayout>
 
 
@@ -129,5 +119,15 @@
             android:onClick="onClickSave"
             android:text="Save" />
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/emgDataTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/maxData"
+        android:layout_alignParentStart="true"
+        android:background="@android:drawable/editbox_dropdown_light_frame"
+        android:text="Myo Status"
+        android:textSize="15dp" />
 
 </RelativeLayout>
