--- a/app/src/main/res/layout/camera_action_bar.xml
+++ b/app/src/main/res/layout/camera_action_bar.xml
@@ -5,8 +5,8 @@
     android:layout_gravity="center"
     android:gravity="center"
     android:orientation="horizontal"
-    android:paddingRight="18dp">
-
+    >
+    <!--android:paddingRight="18dp"-->
     <!--<ImageView-->
         <!--android:layout_width="36dp"-->
         <!--android:layout_height="24dp"-->
