Camera VideoRecording, Default settings change
Video recording length has no limitation now.
Default camera settings changed a bit.

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -28,7 +28,9 @@ android:layout_height="match_parent">
     app:cameraGestureScrollHorizontal="exposureCorrection"
     app:cameraGestureScrollVertical="none"
     app:cameraJpegQuality="100"
-    app:cameraSessionType="picture" />
+    app:cameraSessionType="picture"
+    app:cameraVideoQuality="max720p"
+    app:cameraVideoMaxDuration="0"/>
 
 <!-- Controls -->
 <LinearLayout
