--- a/app/src/main/res/layout/fragment_tab_fragment3.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment3.xml
@@ -27,7 +27,7 @@
                 android:layout_alignParentEnd="false"
                 android:textAllCaps="false"
                 android:background="@drawable/imgbtn_rect_state"
-                android:text="Cancle" />
+                android:text="Delete" />
 
             <Button
                 android:id="@+id/btnReady"
@@ -88,6 +88,7 @@
                 android:id="@+id/gestureNumberPicker">
 
             </NumberPicker>
+
             <View
                 android:layout_width="40dp"
                 android:layout_height="40dp"
@@ -96,18 +97,18 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:background="@drawable/imgbtn_default" />
+
             <View
+                android:id="@+id/view2"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:textColor="@android:color/black"
-                android:id="@+id/view2"
                 android:layout_gravity="center"
                 android:layout_marginLeft="@dimen/cnt_margin"
-                android:background="@drawable/imgbtn_default" />
+                android:background="@drawable/imgbtn_default"
+                android:textColor="@android:color/black" />
             <View
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:text="Hello"
                 android:textColor="@android:color/black"
                 android:id="@+id/view3"
                 android:layout_gravity="center"
@@ -116,7 +117,6 @@
             <View
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:text="Hello"
                 android:textColor="@android:color/black"
                 android:id="@+id/view4"
                 android:layout_gravity="center"
@@ -125,7 +125,6 @@
             <View
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:text="Hello"
                 android:textColor="@android:color/black"
                 android:id="@+id/view5"
                 android:layout_gravity="center"
